deepseek-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepseek-server
  namespace: deepseek
spec:
  selector:
    app: deepseek-server
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
