deepseek-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepseek-ingress
  namespace: deepseek
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: deepseek.devopstips.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deepseek-ui
            port:
              number: 8080
